Updated homepage to match rubric

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,9 @@
     color: #cbb09c !important;
 }
 
-.requests-container {
+/* .requests-container {
     display: flex !important;
-}
+} */
 
 .book_request_form {
     width: 460px !important;
