--- a/css/styles.css
+++ b/css/styles.css
@@ -24,3 +24,11 @@ form{
     margin-top: 25px;
 }
 
+#checkboxes label {
+    float: left;
+  }
+#checkboxes ul {
+    margin: 0;
+    list-style: none;
+    float: left;
+}
